ex01 and ex02 first commit

--- a/labs/ex01/template/taskB.ipynb
+++ b/labs/ex01/template/taskB.ipynb
@@ -2,8 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T12:01:10.765324Z",
+     "iopub.status.busy": "2025-09-15T12:01:10.765021Z",
+     "iopub.status.idle": "2025-09-15T12:01:11.462496Z",
+     "shell.execute_reply": "2025-09-15T12:01:11.461816Z",
+     "shell.execute_reply.started": "2025-09-15T12:01:10.765297Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
@@ -20,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Data Generation\n",
@@ -29,20 +36,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T12:04:15.567167Z",
+     "iopub.status.busy": "2025-09-15T12:04:15.566802Z",
+     "iopub.status.idle": "2025-09-15T12:04:15.584959Z",
+     "shell.execute_reply": "2025-09-15T12:04:15.584245Z",
+     "shell.execute_reply.started": "2025-09-15T12:04:15.567080Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.77132064 0.02075195]\n",
+      " [0.63364823 0.74880388]\n",
+      " [0.49850701 0.22479665]\n",
+      " [0.19806286 0.76053071]] \n",
+      "\n",
+      " [[0.16911084 0.08833981]\n",
+      " [0.68535982 0.95339335]\n",
+      " [0.00394827 0.51219226]\n",
+      " [0.81262096 0.61252607]\n",
+      " [0.72175532 0.29187607]]\n",
+      "(4, 2) \n",
+      "\n",
+      " (5, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(10)\n",
     "P, Q = (np.random.rand(i, 2) for i in (4, 5))\n",
     "P_big, Q_big = (np.random.rand(i, 80) for i in (100, 120))\n",
     "\n",
-    "print(P, \"\\n\\n\", Q)"
+    "print(P, \"\\n\\n\", Q)\n",
+    "print(P.shape, \"\\n\\n\", Q.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T12:03:54.814689Z",
+     "iopub.status.busy": "2025-09-15T12:03:54.814204Z",
+     "iopub.status.idle": "2025-09-15T12:03:54.836816Z",
+     "shell.execute_reply": "2025-09-15T12:03:54.835592Z",
+     "shell.execute_reply.started": "2025-09-15T12:03:54.814638Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 80) \n",
+      "\n",
+      " (120, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(P_big.shape, \"\\n\\n\", Q_big.shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Solution\n",
@@ -51,9 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T12:26:24.325611Z",
+     "iopub.status.busy": "2025-09-15T12:26:24.325119Z",
+     "iopub.status.idle": "2025-09-15T12:26:24.345322Z",
+     "shell.execute_reply": "2025-09-15T12:26:24.344470Z",
+     "shell.execute_reply.started": "2025-09-15T12:26:24.325578Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Your `naive` passed 1 tests.\n"
+     ]
+    }
+   ],
    "source": [
     "def naive(P, Q):\n",
     "    \"\"\"\n",
@@ -71,8 +149,20 @@
     "    # ***************************************************\n",
     "    # INSERT YOUR CODE HERE\n",
     "    # TODO: implement a naive solution\n",
+    "    p = P.shape[0]\n",
+    "    q = Q.shape[0]\n",
+    "    Dim = P.shape[1]\n",
+    "    assert Q.shape[1] == Dim\n",
+    "    \n",
+    "    ret = np.zeros((p,q))\n",
+    "    \n",
+    "    for i in range(p):\n",
+    "        for j in range(q):\n",
+    "            ret[i,j] = np.sum((P[i] - Q[j]) **2)\n",
+    "\n",
+    "    \n",
     "    # ***************************************************\n",
-    "    raise NotImplementedError\n",
+    "    return np.sqrt(ret)\n",
     "\n",
     "\n",
     "test(naive)"
@@ -87,7 +177,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "### Use matching indices\n",
@@ -97,9 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T12:34:56.030493Z",
+     "iopub.status.busy": "2025-09-15T12:34:56.030117Z",
+     "iopub.status.idle": "2025-09-15T12:34:56.045161Z",
+     "shell.execute_reply": "2025-09-15T12:34:56.044519Z",
+     "shell.execute_reply.started": "2025-09-15T12:34:56.030464Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0]\n",
+      " [1 1 1 1 1]\n",
+      " [2 2 2 2 2]\n",
+      " [3 3 3 3 3]]\n",
+      "\n",
+      "[[0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "rows, cols = np.indices((P.shape[0], Q.shape[0]))\n",
     "print(rows, end=\"\\n\\n\")\n",
@@ -108,9 +221,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T14:38:18.736231Z",
+     "iopub.status.busy": "2025-09-15T14:38:18.735919Z",
+     "iopub.status.idle": "2025-09-15T14:38:18.749300Z",
+     "shell.execute_reply": "2025-09-15T14:38:18.748702Z",
+     "shell.execute_reply.started": "2025-09-15T14:38:18.736206Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 1 1 1 1 1 2 2 2 2 2 3 3 3 3 3]\n",
+      "\n",
+      "[0 1 2 3 4 0 1 2 3 4 0 1 2 3 4 0 1 2 3 4]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rows.ravel(), end=\"\\n\\n\")\n",
+    "print(cols.ravel(), end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-15T12:35:15.084205Z",
+     "iopub.status.busy": "2025-09-15T12:35:15.083698Z",
+     "iopub.status.idle": "2025-09-15T12:35:15.104695Z",
+     "shell.execute_reply": "2025-09-15T12:35:15.103871Z",
+     "shell.execute_reply.started": "2025-09-15T12:35:15.084162Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.77132064 0.02075195]\n",
+      " [0.77132064 0.02075195]\n",
+      " [0.77132064 0.02075195]\n",
+      " [0.77132064 0.02075195]\n",
+      " [0.77132064 0.02075195]\n",
+      " [0.63364823 0.74880388]\n",
+      " [0.63364823 0.74880388]\n",
+      " [0.63364823 0.74880388]\n",
+      " [0.63364823 0.74880388]\n",
+      " [0.63364823 0.74880388]\n",
+      " [0.49850701 0.22479665]\n",
+      " [0.49850701 0.22479665]\n",
+      " [0.49850701 0.22479665]\n",
+      " [0.49850701 0.22479665]\n",
+      " [0.49850701 0.22479665]\n",
+      " [0.19806286 0.76053071]\n",
+      " [0.19806286 0.76053071]\n",
+      " [0.19806286 0.76053071]\n",
+      " [0.19806286 0.76053071]\n",
+      " [0.19806286 0.76053071]]\n",
+      "\n",
+      "[[0.16911084 0.08833981]\n",
+      " [0.68535982 0.95339335]\n",
+      " [0.00394827 0.51219226]\n",
+      " [0.81262096 0.61252607]\n",
+      " [0.72175532 0.29187607]\n",
+      " [0.16911084 0.08833981]\n",
+      " [0.68535982 0.95339335]\n",
+      " [0.00394827 0.51219226]\n",
+      " [0.81262096 0.61252607]\n",
+      " [0.72175532 0.29187607]\n",
+      " [0.16911084 0.08833981]\n",
+      " [0.68535982 0.95339335]\n",
+      " [0.00394827 0.51219226]\n",
+      " [0.81262096 0.61252607]\n",
+      " [0.72175532 0.29187607]\n",
+      " [0.16911084 0.08833981]\n",
+      " [0.68535982 0.95339335]\n",
+      " [0.00394827 0.51219226]\n",
+      " [0.81262096 0.61252607]\n",
+      " [0.72175532 0.29187607]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(P[rows.ravel()], end=\"\\n\\n\")\n",
     "print(Q[cols.ravel()])"
@@ -138,6 +336,8 @@
     "    # ***************************************************\n",
     "    # INSERT YOUR CODE HERE\n",
     "    # TODO: implement an optimized solution\n",
+    "\n",
+    "    \n",
     "    # ***************************************************\n",
     "    raise NotImplementedError\n",
     "\n",
@@ -154,7 +354,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "### Use a library\n",
@@ -190,7 +389,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "### Numpy Magic"
@@ -221,7 +419,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# Compare methods"
@@ -272,10 +469,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
